[package]
name = "client-cpp"
version = "0.1.0"
authors = ["The TiKV Project Authors"]
edition = "2018"

[lib]
name = "tikv_client_rust"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
cxx = "=1.0.18"
futures = "0.3"
env_logger = "0.8"
tokio = { version = "1.28.2", features = ["full"] }
tikv-client = { git = "https://github.com/tikv/client-rust.git", rev = "3fad149" }
